tests/baselines/reference/staticPropertyAssignmentInherited1.errors.txt
staticPropertyAssignmentInherited1.js(9,7): error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
  Types of property 'value1' are incompatible.
    Type 'number | undefined' is not assignable to type 'string | number'.
      Type 'undefined' is not assignable to type 'string | number'.


==== staticPropertyAssignmentInherited1.js (1 errors) ====
    let v = Math.random() ? '' : 0;
    
    class Base {
      static value1 = v;
      static value2 = v;
      static value3 = v;
    }
    
    class Derived extends Base {
          ~~~~~~~
!!! error TS2417: Class static side 'typeof Derived' incorrectly extends base class static side 'typeof Base'.
!!! error TS2417:   Types of property 'value1' are incompatible.
!!! error TS2417:     Type 'number | undefined' is not assignable to type 'string | number'.
!!! error TS2417:       Type 'undefined' is not assignable to type 'string | number'.
      static {
        this.value1 = 10;
        this.value4 = {
          [this.value2 = 20]: ''
        }
        this.value5 = {
          get [this.value3 = 30]() { return ''; }
        }
      }
    }
    
    /** @param {typeof Derived} cls  */
    function test(cls) {
      cls.value1;
      cls.value2;
      cls.value3;
    }
    